Update pipeline.yaml for Azure Pipelines

--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -34,14 +34,15 @@ stages:
   - job:
     steps:
     
-    - task: AzureResourceManagerTemplateDeployment@3
+    - task: TerraformInstaller@1
       inputs:
-        deploymentScope: 'Subscription'
-        azureResourceManagerConnection:  '$(azureResourceManagerConnection)'
-        subscriptionId:  '$(azureSubscription)'
-        location: 'Australia East'
-        templateLocation: 'Linked artifact'
-        csmFile: 'infra/main.bicep'
-        overrideParameters: '-uniqueId ${{parameters.uniqueId}} -resourceGroupLocation ${{parameters.resourceGroupLocation}}'
-        deploymentMode: 'Incremental'
-        deploymentName: '$(Build.BuildNumber)'
+        terraformVersion: 'latest'
+    - task: TerraformTaskV4@4
+      inputs:
+        provider: 'azurerm'
+        command: 'init'
+        backendServiceArm: 'Visual Studio Enterprise (MSFT) (24a407c8-9f78-441c-aa95-31a4e273e9a1)'
+        backendAzureRmResourceGroupName: 'tfstate'
+        backendAzureRmStorageAccountName: 'tfstate12909'
+        backendAzureRmContainerName: 'tfstate'
+        backendAzureRmKey: 'terraform.tfstate'
