Update pipeline.yaml for Azure Pipelines

--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -41,6 +41,7 @@ stages:
       inputs:
         provider: 'azurerm'
         command: 'init'
+        workingDirectory: '$(System.DefaultWorkingDirectory)/infra'
         backendServiceArm: 'Visual Studio Enterprise (MSFT) (24a407c8-9f78-441c-aa95-31a4e273e9a1)'
         backendAzureRmResourceGroupName: 'tfstate'
         backendAzureRmStorageAccountName: 'tfstate12909'
