Update pipeline.yaml for Azure Pipelines

--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -31,7 +31,7 @@ variables:
 stages:
 - stage: BuildInfra
   jobs:
-  - job:
+  - job: RunTerraformfile
     steps:
     
     - task: TerraformInstaller@1
@@ -53,3 +53,33 @@ stages:
         command: 'apply'
         workingDirectory: '$(System.DefaultWorkingDirectory)/infra'
         environmentServiceNameAzureRM: 'Visual Studio Enterprise (MSFT) (24a407c8-9f78-441c-aa95-31a4e273e9a1)'
+
+
+- stage: Build
+  jobs:
+  - job: logic_app_build
+    displayName: 'Build and publish logic app'
+    steps:
+    - task: CopyFiles@2
+      displayName: 'Create project folder'
+      inputs:
+        SourceFolder: '$(System.DefaultWorkingDirectory)/logicapp'
+        Contents: |
+          logic/**
+        TargetFolder: 'project_output'
+
+    - task: ArchiveFiles@2
+      displayName: 'Create project zip'
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/project_output/logic'
+        includeRootFolder: false
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+        replaceExistingArchive: true
+
+    - task: PublishPipelineArtifact@1
+      displayName: 'Publish project zip artifact'
+      inputs:
+        targetPath: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+        artifact: '$(logicAppCIArtifactName)'
+        publishLocation: 'pipeline'
