Update infrastructure and pipeline configuration

--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -29,30 +29,30 @@ variables:
   workingDirectory: '$(System.DefaultWorkingDirectory)/'
 
 stages:
-# - stage: BuildInfra
-#   jobs:
-#   - job: RunTerraformfile
-#     steps:
+- stage: BuildInfra
+  jobs:
+  - job: RunTerraformfile
+    steps:
     
-#     - task: TerraformInstaller@1
-#       inputs:
-#         terraformVersion: 'latest'
-#     - task: TerraformTaskV4@4
-#       inputs:
-#         provider: 'azurerm'
-#         command: 'init'
-#         workingDirectory: '$(System.DefaultWorkingDirectory)/infra'
-#         backendServiceArm: 'Visual Studio Enterprise (MSFT) (24a407c8-9f78-441c-aa95-31a4e273e9a1)'
-#         backendAzureRmResourceGroupName: 'tfstate'
-#         backendAzureRmStorageAccountName: 'tfstate12909'
-#         backendAzureRmContainerName: 'tfstate'
-#         backendAzureRmKey: 'terraform.tfstate'
-#     - task: TerraformTaskV4@4
-#       inputs:
-#         provider: 'azurerm'
-#         command: 'apply'
-#         workingDirectory: '$(System.DefaultWorkingDirectory)/infra'
-#         environmentServiceNameAzureRM: 'Visual Studio Enterprise (MSFT) (24a407c8-9f78-441c-aa95-31a4e273e9a1)'
+    - task: TerraformInstaller@1
+      inputs:
+        terraformVersion: 'latest'
+    - task: TerraformTaskV4@4
+      inputs:
+        provider: 'azurerm'
+        command: 'init'
+        workingDirectory: '$(System.DefaultWorkingDirectory)/infra'
+        backendServiceArm: 'Visual Studio Enterprise (MSFT) (24a407c8-9f78-441c-aa95-31a4e273e9a1)'
+        backendAzureRmResourceGroupName: 'tfstate'
+        backendAzureRmStorageAccountName: 'tfstate12909'
+        backendAzureRmContainerName: 'tfstate'
+        backendAzureRmKey: 'terraform.tfstate'
+    - task: TerraformTaskV4@4
+      inputs:
+        provider: 'azurerm'
+        command: 'apply'
+        workingDirectory: '$(System.DefaultWorkingDirectory)/infra'
+        environmentServiceNameAzureRM: 'Visual Studio Enterprise (MSFT) (24a407c8-9f78-441c-aa95-31a4e273e9a1)'
 
 
 - stage: Build
